--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -5790,6 +5790,19 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   background: transparent;
   border: none; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label, .color-light .event-popover label {
+  color: #3b4252;
+  opacity: 1; }
+.color-light label {
+  color: #3b4252;
+  opacity: 1; }
+
+.circular.day {
+  color: #d8dee9; }
+
 /********
  * Gala *
  *******/
